--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,6 @@
             <groupId>org.kohsuke</groupId>
             <artifactId>github-api</artifactId>
             <version>1.95</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.opencsv</groupId>
@@ -43,6 +42,12 @@
             <artifactId>junit-jupiter-engine</artifactId>
             <version>5.6.0</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.kohsuke</groupId>
+            <artifactId>github-api</artifactId>
+            <version>1.95</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
